# pairHMM

./: LICENSE  README.md
E_coli_K12/: benchmark  do_index  gatk_cpu  gatk_fpga
E_coli_K12/input/fasta/: E.coli_K12_MG1655.dict
src/gatk/: gatk.patch
src/jni/compute/: CMakeLists.txt  common.h  compute_cl.hpp  constantd.h  constantf.h  gatk.cpp  jni.cpp  main.cpp  tb.cpp
src/vitis/compute_kernels/: .cproject  .project  compute_kernels.prj
src/vitis/compute_kernels/Hardware/: compute-compile.cfg  guidance.html  guidance.html.bak  guidance.json  guidance.pb  guidance.pb.bak  makefile
src/vitis/compute_kernels/src/: common.h  constantd.h  constantf.h  gatk.cpp
src/vitis/gene_system/: .cproject  .project  gene_system.sprj
src/vitis/gene_system/_ide/launch/: gene_system-Default (1).launch  gene_system-Default (3).launch  gene_system-Default.launch
src/vitis/gene_system_hw_link/: .cproject  .project  gene_system_hw_link.prj
src/vitis/gene_system_hw_link/Hardware/: compute-link.cfg  guidance.html  guidance.html.bak  guidance.json  guidance.pb  guidance.pb.bak  makefile
